--- a/data/edithostdialog.glade
+++ b/data/edithostdialog.glade
@@ -10,7 +10,7 @@
   </object>
   <object class="GtkDialog" id="edithostdialog">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Edit host</property>
+    <property name="title" translatable="yes">Edit Client</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
@@ -59,121 +59,100 @@
             <property name="position">0</property>
           </packing>
         </child>
-        <child>
-          <object class="GtkFrame" id="frame1">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label_xalign">0</property>
-            <property name="shadow_type">in</property>
-            <child>
-              <object class="GtkAlignment" id="alignment1">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="left_padding">12</property>
-                <child>
-                  <object class="GtkGrid" id="grid1">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="margin_left">10</property>
-                    <property name="margin_right">10</property>
-                    <property name="margin_top">10</property>
-                    <property name="margin_bottom">10</property>
-                    <property name="row_spacing">5</property>
-                    <property name="column_spacing">10</property>
-                    <child>
-                      <object class="GtkLabel" id="label2">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">MAC address</property>
-                        <property name="xalign">0</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">0</property>
-                        <property name="top_attach">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label3">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Description</property>
-                        <property name="xalign">0</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">0</property>
-                        <property name="top_attach">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="label4">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label" translatable="yes">Operating system</property>
-                        <property name="xalign">0</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">0</property>
-                        <property name="top_attach">2</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkLabel" id="maclabel">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="label">11:22:33:44:55:66</property>
-                        <property name="xalign">0</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkEntry" id="descriptionentry">
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">1</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkComboBox" id="oscombo">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="model">distrostore</property>
-                        <child>
-                          <object class="GtkCellRendererText" id="cellrenderertext1"/>
-                          <attributes>
-                            <attribute name="text">0</attribute>
-                          </attributes>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="left_attach">1</property>
-                        <property name="top_attach">2</property>
-                      </packing>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="label">
-              <object class="GtkLabel" id="label1">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Edit host</property>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="padding">10</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
+		<child>
+		  <object class="GtkAlignment" id="alignment1">
+			<property name="visible">True</property>
+			<property name="can_focus">False</property>
+			<property name="left_padding">10</property>
+			<property name="right_padding">10</property>
+			<property name="top_padding">10</property>
+			<property name="bottom_padding">10</property>
+			<child>
+			  <object class="GtkGrid" id="grid1">
+				<property name="visible">True</property>
+				<property name="can_focus">False</property>
+				<property name="row_spacing">5</property>
+				<property name="column_spacing">10</property>
+				<property name="row_homogeneous">True</property>
+				<child>
+				  <object class="GtkLabel" id="label2">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">MAC address:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">0</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="label3">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">Description:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">1</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="label4">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">Operating system:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">2</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="maclabel">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label">11:22:33:44:55:66</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">0</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkEntry" id="descriptionentry">
+					<property name="visible">True</property>
+					<property name="can_focus">True</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">1</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkComboBox" id="oscombo">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="model">distrostore</property>
+					<child>
+					  <object class="GtkCellRendererText" id="cellrenderertext1"/>
+					  <attributes>
+						<attribute name="text">0</attribute>
+					  </attributes>
+					</child>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">2</property>
+				  </packing>
+				</child>
+			  </object>
+			</child>
+		  </object>
+		</child>
       </object>
     </child>
     <action-widgets>
