--- a/data/edituserdialog.glade
+++ b/data/edituserdialog.glade
@@ -4,7 +4,7 @@
   <requires lib="gtk+" version="3.12"/>
   <object class="GtkDialog" id="edituserdialog">
     <property name="can_focus">False</property>
-    <property name="title" translatable="yes">Reset password</property>
+    <property name="title" translatable="yes">Reset Password</property>
     <property name="type_hint">dialog</property>
     <child internal-child="vbox">
       <object class="GtkBox" id="dialog-vbox1">
@@ -53,140 +53,114 @@
             <property name="position">0</property>
           </packing>
         </child>
-        <child>
-          <object class="GtkFrame" id="frame1">
-            <property name="visible">True</property>
-            <property name="can_focus">False</property>
-            <property name="label_xalign">0</property>
-            <property name="shadow_type">in</property>
-            <child>
-              <object class="GtkAlignment" id="alignment1">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="left_padding">12</property>
-                <property name="right_padding">12</property>
-                <child>
-                  <object class="GtkBox" id="box1">
-                    <property name="visible">True</property>
-                    <property name="can_focus">False</property>
-                    <property name="orientation">vertical</property>
-                    <child>
-                      <object class="GtkGrid" id="grid1">
-                        <property name="visible">True</property>
-                        <property name="can_focus">False</property>
-                        <property name="row_spacing">5</property>
-                        <property name="column_spacing">10</property>
-                        <child>
-                          <object class="GtkLabel" id="label2">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">User</property>
-                            <property name="xalign">0</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">0</property>
-                            <property name="top_attach">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkLabel" id="userlabel">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="xalign">0</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">1</property>
-                            <property name="top_attach">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkLabel" id="label3">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Password</property>
-                            <property name="xalign">0</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">0</property>
-                            <property name="top_attach">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkEntry" id="passentry">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="visibility">False</property>
-                            <property name="input_purpose">password</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">1</property>
-                            <property name="top_attach">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkLabel" id="label4">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Repeat password</property>
-                            <property name="xalign">0</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">0</property>
-                            <property name="top_attach">2</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkEntry" id="pass2entry">
-                            <property name="visible">True</property>
-                            <property name="can_focus">True</property>
-                            <property name="visibility">False</property>
-                          </object>
-                          <packing>
-                            <property name="left_attach">1</property>
-                            <property name="top_attach">2</property>
-                          </packing>
-                        </child>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">0</property>
-                      </packing>
-                    </child>
-                    <child>
-                      <object class="GtkCheckButton" id="showpasscheck">
-                        <property name="label" translatable="yes">show passwords</property>
-                        <property name="visible">True</property>
-                        <property name="can_focus">True</property>
-                        <property name="receives_default">False</property>
-                        <property name="xalign">0</property>
-                        <property name="draw_indicator">True</property>
-                      </object>
-                      <packing>
-                        <property name="expand">False</property>
-                        <property name="fill">True</property>
-                        <property name="position">1</property>
-                      </packing>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </child>
-            <child type="label">
-              <object class="GtkLabel" id="label1">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Reset password</property>
-              </object>
-            </child>
-          </object>
-          <packing>
-            <property name="expand">False</property>
-            <property name="fill">True</property>
-            <property name="padding">10</property>
-            <property name="position">1</property>
-          </packing>
-        </child>
+		<child>
+		  <object class="GtkAlignment" id="alignment1">
+			<property name="visible">True</property>
+			<property name="can_focus">False</property>
+			<property name="left_padding">10</property>
+			<property name="right_padding">10</property>
+			<property name="top_padding">10</property>
+			<property name="bottom_padding">10</property>
+			<child>
+			  <object class="GtkGrid" id="grid1">
+				<property name="visible">True</property>
+				<property name="can_focus">False</property>
+				<property name="row_spacing">5</property>
+				<property name="column_spacing">10</property>
+				<property name="row_homogeneous">True</property>
+				<child>
+				  <object class="GtkLabel" id="label2">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">User:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">0</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="userlabel">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">0</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="label3">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">Password:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">1</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkEntry" id="passentry">
+					<property name="visible">True</property>
+					<property name="can_focus">True</property>
+					<property name="visibility">False</property>
+					<property name="input_purpose">password</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">1</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkLabel" id="label4">
+					<property name="visible">True</property>
+					<property name="can_focus">False</property>
+					<property name="label" translatable="yes">Confirm password:</property>
+					<property name="xalign">0</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">0</property>
+					<property name="top_attach">2</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkEntry" id="pass2entry">
+					<property name="visible">True</property>
+					<property name="can_focus">True</property>
+					<property name="visibility">False</property>
+				  </object>
+				  <packing>
+					<property name="left_attach">1</property>
+					<property name="top_attach">2</property>
+				  </packing>
+				</child>
+				<child>
+				  <object class="GtkCheckButton" id="showpasscheck">
+					<property name="label" translatable="yes">Show passwords</property>
+					<property name="visible">True</property>
+					<property name="can_focus">True</property>
+					<property name="receives_default">False</property>
+					<property name="xalign">0</property>
+					<property name="draw_indicator">True</property>
+				  </object>
+				  <packing>
+						<property name="left_attach">0</property>
+						<property name="top_attach">3</property>
+				  </packing>
+				</child>
+			  </object>
+			  <packing>
+				<property name="expand">False</property>
+				<property name="fill">True</property>
+				<property name="position">0</property>
+			  </packing>
+			</child>
+		  </object>
+		</child>
       </object>
     </child>
     <action-widgets>
