Add initial .csv import support
- Adds "import" button to user screen
- Accepts a .csv file that must meet the following requirements:

* Comma seperated. Fields can optionally be enclosed by doublequotes.
* No header, just data
* Two columns: one for user name, one for password
* LF (unix) or CR LF (MS-DOS) line endings

- User names are normalized by converting them to lower case,
  and replacing any spaces with dots.
- Checked if they do not contain invalid characters, if the csv file
  does not contain duplicate user names, and if the user does not
  already exists in the system.
  User names that fails the check are skipped, and an warning message
  is shown.
- The names to be imported are shown in the normal add user window
  before they are actually added. Allowing user to review if everything
  looks fine.

- A third-party CSV header-only library is used for actual parsing
  (BSD licensed)

Related to issue #2

--- a/data/piserver.glade
+++ b/data/piserver.glade
@@ -117,6 +117,19 @@
                   </packing>
                 </child>
                 <child>
+                  <object class="GtkToolButton" id="importusersbutton">
+                    <property name="visible">True</property>
+                    <property name="can_focus">False</property>
+                    <property name="label" translatable="yes">Import</property>
+                    <property name="use_underline">True</property>
+                    <property name="stock_id">gtk-open</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="homogeneous">True</property>
+                  </packing>
+                </child>
+                <child>
                   <object class="GtkToolButton" id="edituserbutton">
                     <property name="visible">True</property>
                     <property name="sensitive">False</property>
